--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "astro-og-canvas": "^0.7.0",
     "cheerio": "^1.0.0",
     "lite-youtube-embed": "^0.3.3",
+    "pdfjs-dist": "^5.3.31",
     "rehype-mathjax": "^7.1.0",
     "remark-math": "^6.0.0",
     "svelte": "^5.1.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
+    "tesseract.js": "^6.0.1",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
