--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@astrojs/sitemap": "^3.3.0",
     "@astrojs/svelte": "^7.0.7",
     "@astrojs/tailwind": "^6.0.1",
+    "@huggingface/inference": "^4.0.4",
+    "@qdrant/js-client-rest": "^1.14.1",
     "@shikijs/transformers": "^3.2.1",
     "@tailwindcss/forms": "^0.5.9",
+    "@xenova/transformers": "^2.17.2",
     "astro": "^5.5.4",
     "astro-custom-embeds": "^0.0.1",
     "astro-og-canvas": "^0.7.0",
     "cheerio": "^1.0.0",
+    "dotenv": "^16.5.0",
     "lite-youtube-embed": "^0.3.3",
     "pdfjs-dist": "^5.3.31",
     "rehype-mathjax": "^7.1.0",
