Add new PDF files for various meetings from 2016 to 2025, and introduce a script to fix PDF file names by replacing spaces and special characters. Update package.json to include the new script command.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:prod": "astro check && astro build && pagefind",
     "preview": "astro preview",
     "astro": "astro",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "fix-pdf-name": "node scripts/fixPdfName.js"
   },
   "dependencies": {
     "@ascorbic/bluesky-loader": "^0.0.3",
