--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@shikijs/transformers": "^3.2.1",
     "@tailwindcss/forms": "^0.5.9",
     "@xenova/transformers": "^2.17.2",
-    "astro": "^5.5.4",
+    "astro": "^5.9.4",
     "astro-custom-embeds": "^0.0.1",
     "astro-og-canvas": "^0.7.0",
     "cheerio": "^1.0.0",
@@ -41,6 +41,7 @@
     "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "@astrojs/vercel": "^8.1.5",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "pagefind": "^1.3.0",
